--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <header>
         <h1>Welcome to Golden Path</h1>
         <nav>
-            <a href="#">Home</a>
+            <a href="home.html">Home</a>
             <a href="#">About</a>
             <a href="#">Contact</a>
         </nav>
