--- a/home.html
+++ b/home.html
@@ -35,15 +35,15 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to Golden Path</h1>
+        <h1>Welcome to Home of the Golden Path</h1>
         <nav>
-            <a href="#">Home</a>
-            <a href="#">About</a>
+            <a href="home.html">Home</a>
+            <a href="index.html">Index</a>
             <a href="#">Contact</a>
         </nav>
     </header>
     <main>
-        <p>This is the home page of the Golden Path project. Explore our site to learn more!</p>
+        <p>This is the NEW home page of the Golden Path project. Explore our site to learn more!</p>
     </main>
 </body>
 </html>
