--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
         <h1>Welcome to Golden Path</h1>
         <nav>
             <a href="home.html">Home</a>
-            <a href="#">About</a>
-            <a href="#">Contact</a>
+            <a href="about.html">About</a>
+            <a href="contact.md">Contact</a>
         </nav>
     </header>
     <main>
