--- a/index.html
+++ b/index.html
@@ -35,15 +35,15 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to Golden Path</h1>
+        <h1>Welcome to Stewart's Playgroud/h1>
         <nav>
             <a href="home.html">Home</a>
-            <a href="about.html">About</a>
+            <a href="index.html">Index</a>
             <a href="contact.md">Contact</a>
         </nav>
     </header>
     <main>
-        <p>This is the home page of the Golden Path project. Explore our site to learn more!</p>
+        <p>This is the home page of the Stewart's test grounds for Github publishing. Explore our site to learn more!</p>
     </main>
 </body>
 </html>
