--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to Stewart's Playgroud/h1>
+        <h1>Welcome to Stewart's Playgroud</h1>
         <nav>
             <a href="home.html">Home</a>
             <a href="index.html">Index</a>
