--- a/home.html
+++ b/home.html
@@ -39,7 +39,7 @@
         <nav>
             <a href="home.html">Home</a>
             <a href="index.html">Index</a>
-            <a href="contact.md">Contact</a>
+            <a href="contact.html">Contact</a>
         </nav>
     </header>
     <main>
