--- a/home.html
+++ b/home.html
@@ -35,7 +35,7 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to Home of the Golden Path</h1>
+        <h1>Stewart York Home</h1>
         <nav>
             <a href="home.html">Home</a>
             <a href="index.html">Index</a>
