--- a/htmltest.html
+++ b/htmltest.html
@@ -3,8 +3,10 @@
   <thead>
     <tr>
       <th>Name</th>
-      <th>Role</th>
-      <th>Location</th>
+      <th>SerialNo</th>
+      <th>Links to Pics</th>
+      <th>Description</th>
+      <th>Cost</th>
     </tr>
   </thead>
   <tbody>
@@ -12,16 +14,22 @@
       <td>Stewart York</td>
       <td>SR. EDU SOLUTIONS ARCHITECT</td>
       <td>Lakewood Ranch</td>
+      <td>Lakewood Ranch</td>
+      <td>Lakewood Ranch</td>
     </tr>
     <tr>
       <td>Jordan Chrysafidis</td>
       <td>Manager</td>
       <td>Microsoft</td>
+      <td>Microsoft</td>
+      <td>Microsoft</td>
     </tr>
     <tr>
       <td>Deirdre Quarnstrom</td>
       <td>Skip Manager</td>
       <td>Microsoft</td>
+      <td>Microsoft</td>
+      <td>Microsoft</td>
     </tr>
   </tbody>
 </table>
