--- a/htmltest.html
+++ b/htmltest.html
@@ -1,35 +1,63 @@
+<DOCTYPE html>
+      <html>
+            <table border="1">
+              <thead>
+                <tr>
+                  <th>Name</th>
+                  <th>SerialNo</th>
+                  <th>Links to Pics</th>
+                  <th>Description</th>
+                  <th>Cost</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>Stewart York</td>
+                  <td>SR. EDU SOLUTIONS ARCHITECT</td>
+                  <td>Lakewood Ranch</td>
+                  <td>Lakewood Ranch</td>
+                  <td>Lakewood Ranch</td>
+                </tr>
+                <tr>
+                  <td>Jordan Chrysafidis</td>
+                  <td>Manager</td>
+                  <td>Microsoft</td>
+                  <td>Microsoft</td>
+                  <td>Microsoft</td>
+                </tr>
+                <tr>
+                  <td>Deirdre Quarnstrom</td>
+                  <td>Skip Manager</td>
+                  <td>Microsoft</td>
+                  <td>Microsoft</td>
+                  <td>Microsoft</td>
+                </tr>
+              </tbody>
+            </table>
 
-<table border="1">
-  <thead>
+            
+<body>
+
+  <h2>Image Links in a Table</h2>
+
+  <table border="1">
     <tr>
-      <th>Name</th>
-      <th>SerialNo</th>
-      <th>Links to Pics</th>
-      <th>Description</th>
-      <th>Cost</th>
+      <td>
+        https://example.com/fullsize1.jpg
+      </td>
+      <td>
+        <a href="https://example.com/fullsize2.jpg" target="_blank">
+          <img src="https://example.com/thumb2.jpg" alt="Thumbnail 2" class="thumbnail">
+        </a>
+      </td>
+      <td>
+        <a href="https://example.com/fullsize3.jpg" target="_blank">
+          <img src="https://example.com/thumb3.jpg" alt="Thumbnail 3" class="thumbnail">
+        </a>
+      </td>
     </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td>Stewart York</td>
-      <td>SR. EDU SOLUTIONS ARCHITECT</td>
-      <td>Lakewood Ranch</td>
-      <td>Lakewood Ranch</td>
-      <td>Lakewood Ranch</td>
-    </tr>
-    <tr>
-      <td>Jordan Chrysafidis</td>
-      <td>Manager</td>
-      <td>Microsoft</td>
-      <td>Microsoft</td>
-      <td>Microsoft</td>
-    </tr>
-    <tr>
-      <td>Deirdre Quarnstrom</td>
-      <td>Skip Manager</td>
-      <td>Microsoft</td>
-      <td>Microsoft</td>
-      <td>Microsoft</td>
-    </tr>
-  </tbody>
-</table>
+  </table>
+
+</body>
+
+      </html>
