--- a/htmltest.html
+++ b/htmltest.html
@@ -49,12 +49,12 @@
       </td>
       <td>
         <a href="https://example.com/fullsize2.jpg" target="_blank">
-          <img src="https://example.com/thumb2.jpg" alt="Thumbnail 2" class="thumbnail">
+          <img src="images\Camo-2_Gun.jpeg" alt="Thumbnail 2" class="thumbnail">
         </a>
       </td>
       <td>
         <a href="https://example.com/fullsize3.jpg" target="_blank">
-          <img src="https://example.com/thumb3.jpg" alt="Thumbnail 3" class="thumbnail">
+          <img src="images\Camo-1_Gun.jpeg" alt="Thumbnail 3" class="thumbnail">
         </a>
       </td>
     </tr>
