--- a/htmltest.html
+++ b/htmltest.html
@@ -45,7 +45,7 @@
   <table border="1">
     <tr>
       <td>
-        https://example.com/fullsize1.jpg
+        Gun Pictures
       </td>
       <td>
         <a href="https://example.com/fullsize2.jpg" target="_blank">
