--- a/htmltest.html
+++ b/htmltest.html
@@ -48,8 +48,8 @@
         Gun Pictures
       </td>
       <td>
-        <a href="https://example.com/fullsize2.jpg" target="_blank">
-          <img src="\images\Camo-2_Gun.jpeg" alt="Thumbnail 2" class="thumbnail">
+        <a> 
+          <img src="\images\Camo-2_Gun.jpeg" alt="Thumbnail Camo Gun" class="thumbnail">
         </a>
       </td>
       <td>
