--- a/htmltest.html
+++ b/htmltest.html
@@ -49,7 +49,7 @@
       </td>
       <td>
         <a> 
-          <img src="\images\Camo-2_Gun.jpeg" alt="Thumbnail Camo Gun" class="thumbnail">
+          <img src="/Images/Camo-2_Gun.jpeg" alt="Thumbnail Camo Gun" class="thumbnail">
         </a>
       </td>
       <td>
