--- a/dev.html
+++ b/dev.html
@@ -2,20 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Home - Golden Path</title>
+    <title>Dev Site Location</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         body { 
             font-family: Arial, sans-serif; 
-            margin: 40px; 
-            background: #f9f9f9; 
+            margin: 60px; 
+            background: #abd1fa; 
             color: #222;
         }
         header {
             margin-bottom: 30px;
         }
         h1 {
-            color: #2a5d84;
+            color: #012e17;
         }
         nav a {
             margin-right: 15px;
@@ -35,16 +35,16 @@
 </head>
 <body>
     <header>
-        <h1>Stewart York Home</h1>
+        <h1>Welcome to Stewart's Playgroud</h1>
         <nav>
             <a href="home.html">Home</a>
             <a href="index.html">Index</a>
-            <a href="dev.html">Dev</a>
+            <a href="dev.html">This page - Dev</a>
             <a href="contact.html">Contact</a>
         </nav>
     </header>
     <main>
-        <p>Go to Contacts for Inventory</p>
+        <p>This is the home page of the Stewart's test grounds for Github publishing. Explore our site to learn more!</p>
     </main>
 </body>
 </html>
