--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         <nav>
             <a href="home.html">Home</a>
             <a href="index.html">Index</a>
+            <a href="dev.html">Dev</a>
             <a href="contact.html">Contact</a>
         </nav>
     </header>
